hphp/hack/test/typecheck/expression_trees/default_parameter.php.exp
File "default_parameter.php", line 5, characters 71-83:
Expected constant expression for initializer (Parsing[1002])
File "default_parameter.php", line 9, characters 61-73:
Expected constant expression for initializer (Parsing[1002])
File "default_parameter.php", line 5, characters 71-80:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "default_parameter.php", line 5, characters 66-67:
  From this declaration, the context of this function body provides the capability AccessGlobals
  File "expr_tree.hhi", line 17, characters 26-33:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, SystemLocal, WriteProperty}
File "default_parameter.php", line 5, characters 82-82:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "default_parameter.php", line 5, characters 66-67:
  From this declaration, the context of this function body provides the capability AccessGlobals
  File "expr_tree.hhi", line 31, characters 26-32:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, SystemLocal, WriteProperty}
File "default_parameter.php", line 5, characters 82-82:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "default_parameter.php", line 5, characters 66-67:
  From this declaration, the context of this function body provides the capability AccessGlobals
  File "expr_tree.hhi", line 63, characters 19-26:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, SystemLocal, WriteProperty}
File "default_parameter.php", line 9, characters 61-70:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "default_parameter.php", line 9, characters 56-57:
  From this declaration, the context of this function body provides the capability AccessGlobals
  File "expr_tree.hhi", line 17, characters 26-33:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, SystemLocal, WriteProperty}
File "default_parameter.php", line 9, characters 72-72:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "default_parameter.php", line 9, characters 56-57:
  From this declaration, the context of this function body provides the capability AccessGlobals
  File "expr_tree.hhi", line 31, characters 26-32:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, SystemLocal, WriteProperty}
File "default_parameter.php", line 9, characters 72-72:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "default_parameter.php", line 9, characters 56-57:
  From this declaration, the context of this function body provides the capability AccessGlobals
  File "expr_tree.hhi", line 63, characters 19-26:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, SystemLocal, WriteProperty}
